// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WizardButtonBar matches snapshot when provided minimal props 1`] = `
<div
  className="wizard-button-bar"
>
  <button
    className="btn btn-md btn-primary"
    data-test="next--button"
    onClick={[MockFunction]}
  >
    Next
  </button>
</div>
`;

exports[`WizardButtonBar with decrement and last step is "true" matches snapshot when provided decrement function and last step as "true" 1`] = `
<div
  className="wizard-button-bar"
>
  <button
    className="btn btn-md btn-default"
    data-test="previous--button"
    onClick={[MockFunction]}
  >
    Previous
  </button>
  <button
    className="btn btn-md btn-success"
    data-test="next--button"
    onClick={[MockFunction]}
  >
    Next
  </button>
</div>
`;
